tests/res/arrays/error_bool_index.say
print([1][true]); // error: Invalid array index: true